fix: tweaked spacing issues according to style guide

--- a/blog-preview-card/index.css
+++ b/blog-preview-card/index.css
@@ -51,8 +51,8 @@ span {
 .card-date {
   font-weight: 500;
   font-size: 14px;
+  margin-top: 12px;
   margin-bottom: 12px;
-  margin-top: 5px;
 }
 
 h1 {
@@ -67,6 +67,7 @@ h1 {
   font-size: 16px;
   line-height: 150%;
   margin-block: 0;
+  margin-top: 12px;
 }
 
 .card-avatar {
